style(menu): fix alignment with anchor menu items
closes #4142, closes #4353

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -79,6 +79,10 @@ md-menu-item {
     padding-right: 2*$baseline-grid;
   }
 
+  > a.md-button {
+    display: flex;
+  }
+
   > .md-button {
     border-radius: 0;
     margin: auto 0;
